Fix video overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,41 @@
 body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  margin: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    margin: 0;
 }
 
 #background {
-  background-image: url("./assets/test-background.jpg");
-  background-size: cover;
-  background-position: center center;
-  position: relative;
-  top: 0;
-  bottom: 0;
-  height: 100vh;
-  z-index: 5;
+    background-image: url("./assets/test-background.jpg");
+    background-size: cover;
+    background-position: center center;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    height: 100vh;
+    z-index: 5;
+    overflow: hidden;
 }
 
 #bg-vid {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translateX(-50%) translateY(-50%);
-  transform: translateX(-50%) translateY(-50%);
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: 9;
-  overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    min-width: 100%;
+    min-height: 100%;
+    width: 100vw;
+    height: auto;
+    z-index: 9;
 }
 
 #background-overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  height: 100%;
-  width: 100%;
-  z-index: 10;
-  background-color: rgba(0, 0, 0, 0.6);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    height: 100vh;
+    width: 100vw;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.6);
 }
